JAMES-4032 Manage multiple domains with DKIMHook (#2657)